# jagged_lua

./: .gitignore  CMakeLists.txt  jagged_lua.sln
lua_core/: CMakeLists.txt  lua_core.vcxproj
lua_core/src/: lua.def
lua_interface/: CMakeLists.txt  LuaInterface.cs  lua_interface.csproj
lua_interface/Properties/: AssemblyInfo.cs
test/: CMakeLists.txt  Program.cs  test.csproj
test/Properties/: AssemblyInfo.cs
